--- a/review/official document/03-reusability/05-过滤器.html
+++ b/review/official document/03-reusability/05-过滤器.html
@@ -12,6 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 
   <div id="app">
+    <p>{{message | capitalize}}</p>
   </div>
 
   <script>
@@ -19,8 +20,14 @@
       el: '#app',
       data: {
         value: '崔帆',
-        message: 'hello world'
+        message: 'hello world',
+
       },
+      filters: {
+        capitalize(value) {
+          return value.toUpperCase()
+        }
+      }
     })
   </script>
 </body>
